--- a/preprocess/test.ipynb
+++ b/preprocess/test.ipynb
@@ -257,151 +257,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index(['SUBJECT_ID', 'ICUSTAY_ID', 'DBSOURCE', 'FIRST_CAREUNIT',\n",
-      "       'LAST_CAREUNIT', 'FIRST_WARDID', 'LAST_WARDID', 'INTIME', 'OUTTIME',\n",
-      "       'LOS', 'GENDER', 'DOB', 'DOD', 'DOD_HOSP', 'DOD_SSN', 'EXPIRE_FLAG',\n",
-      "       'age', 'readmission', 'mortality', 'los_3day', 'los_7day', 'ICD9_CODE',\n",
-      "       '12h_obs', '24h_obs', 'ID', 'code_name', 'code_offset', 'value', 'uom',\n",
-      "       'code_order', 'seq_len', 'patienthealthsystemstayid', 'gender',\n",
-      "       'ethnicity', 'hospitalid', 'wardid', 'apacheadmissiondx',\n",
-      "       'admissionheight', 'hospitaladmittime24', 'hospitaladmitoffset',\n",
-      "       'hospitaladmitsource', 'hospitaldischargeyear',\n",
-      "       'hospitaldischargetime24', 'hospitaldischargeoffset',\n",
-      "       'hospitaldischargelocation', 'hospitaldischargestatus', 'unittype',\n",
-      "       'unitadmittime24', 'unitadmitsource', 'unitvisitnumber', 'unitstaytype',\n",
-      "       'admissionweight', 'dischargeweight', 'unitdischargetime24',\n",
-      "       'unitdischargeoffset', 'unitdischargelocation', 'unitdischargestatus',\n",
-      "       'uniquepid', 'losday', 'diagnosisstring', 'subject_id', 'stay_id',\n",
-      "       'first_careunit', 'last_careunit', 'intime', 'outtime', 'los',\n",
-      "       'anchor_age', 'dod'],\n",
-      "      dtype='object')\n"
-     ]
-    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/2167356372.py:16: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n"
+      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/1121009204.py:7: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_embed = df_embed.append({'embed': embed_input}, ignore_index=True)\n"
      ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>embed</th>\n",
-       "      <th>age</th>\n",
-       "      <th>GENDER</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>Anion Gap11.0mEq/L:Bicarbonate25.0mEq/L:Biliru...</td>\n",
-       "      <td>45</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>30060  :Levofloxacin500mg:Dextrose 5%100ml:NS1...</td>\n",
-       "      <td>300</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Acetaminophen ug/mL:Alanine Aminotransferase (...</td>\n",
-       "      <td>21</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Alanine Aminotransferase (ALT)17.0IU/L:Alkalin...</td>\n",
-       "      <td>85</td>\n",
-       "      <td>M</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>Anion Gap15.0mEq/L:Bicarbonate24.0mEq/L:Chlori...</td>\n",
-       "      <td>59</td>\n",
-       "      <td>F</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                               embed  age GENDER\n",
-       "0  Anion Gap11.0mEq/L:Bicarbonate25.0mEq/L:Biliru...   45      M\n",
-       "1  30060  :Levofloxacin500mg:Dextrose 5%100ml:NS1...  300      F\n",
-       "2  Acetaminophen ug/mL:Alanine Aminotransferase (...   21      M\n",
-       "3  Alanine Aminotransferase (ALT)17.0IU/L:Alkalin...   85      M\n",
-       "4  Anion Gap15.0mEq/L:Bicarbonate24.0mEq/L:Chlori...   59      F"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Print columns\n",
-    "print(df.columns)\n",
-    "\n",
-    "\n",
-    "\n",
     "def embed_data(df):\n",
     "    df_embed = pd.DataFrame()\n",
-    "    for i in range(len(df)):\n",
-    "        for j in range(len(df['code_name'][i])):\n",
-    "            input_text = str(df['code_name'][i][j]) + str(df['value'][i][j]) + str(df['uom'][i][j])\n",
-    "\n",
-    "        concat = embed(concat)\n",
-    "        df_embed = df_embed.append({'embed': concat}, ignore_index=True)\n",
-    "        # Add age and gender to df_embed\n",
-    "    df_embed['age'] = df['age']\n",
-    "    df_embed['GENDER'] = df['GENDER']\n",
+    "    for k in range(len(df)):\n",
+    "        for n in range(len(df['code_name'][k])):\n",
+    "            input_text = str(df['code_name'][k][n]) + str(df['value'][k][n]) + str(df['uom'][k][n])\n",
+    "            embed_input = embed(input_text)\n",
+    "            df_embed = df_embed.append({'embed': embed_input}, ignore_index=True)\n",
     "    return df_embed\n",
     "\n",
     "# Test with first 10 rows\n",
