--- a/preprocess/test.ipynb
+++ b/preprocess/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,177 +37,205 @@
        "      <th>OUTTIME</th>\n",
        "      <th>LOS</th>\n",
        "      <th>...</th>\n",
-       "      <th>diagnosisstring</th>\n",
-       "      <th>subject_id</th>\n",
-       "      <th>stay_id</th>\n",
-       "      <th>first_careunit</th>\n",
-       "      <th>last_careunit</th>\n",
-       "      <th>intime</th>\n",
-       "      <th>outtime</th>\n",
-       "      <th>los</th>\n",
-       "      <th>anchor_age</th>\n",
-       "      <th>dod</th>\n",
+       "      <th>ICD9_CODE</th>\n",
+       "      <th>12h_obs</th>\n",
+       "      <th>24h_obs</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>code_name</th>\n",
+       "      <th>code_offset</th>\n",
+       "      <th>value</th>\n",
+       "      <th>uom</th>\n",
+       "      <th>code_order</th>\n",
+       "      <th>seq_len</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>1027140.0</td>\n",
-       "      <td>3011529.0</td>\n",
+       "      <td>1027140</td>\n",
+       "      <td>3011529</td>\n",
        "      <td>carevue</td>\n",
        "      <td>CCU</td>\n",
        "      <td>CCU</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>57.0</td>\n",
+       "      <td>57</td>\n",
+       "      <td>57</td>\n",
        "      <td>2152-07-23 05:34:12</td>\n",
        "      <td>2152-07-24 18:37:32</td>\n",
        "      <td>1.5440</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>2152-07-23 17:34:12</td>\n",
+       "      <td>2152-07-24 05:34:12</td>\n",
+       "      <td>3011529</td>\n",
+       "      <td>[Anion Gap, Bicarbonate, Bilirubin, Total, Cho...</td>\n",
+       "      <td>[78, 78, 78, 78, 78, 78, 78, 78, 78, 78, 78, 7...</td>\n",
+       "      <td>[11.0, 25.0, 0.3, 5.9, 31.0, 108.0, 183.0, 0.7...</td>\n",
+       "      <td>[mEq/L, mEq/L, mg/dL, Ratio, mg/dL, mg/dL, mg/...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>20</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>1027482.0</td>\n",
-       "      <td>3011175.0</td>\n",
+       "      <td>1027482</td>\n",
+       "      <td>3011175</td>\n",
        "      <td>carevue</td>\n",
        "      <td>MICU</td>\n",
        "      <td>MICU</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>12.0</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
        "      <td>2162-03-20 17:22:48</td>\n",
        "      <td>2162-03-22 18:26:10</td>\n",
        "      <td>2.0440</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>2162-03-21 05:22:48</td>\n",
+       "      <td>2162-03-21 17:22:48</td>\n",
+       "      <td>3011175</td>\n",
+       "      <td>[30060, Levofloxacin, Dextrose 5%, NS, Fentany...</td>\n",
+       "      <td>[337, 397, 397, 397, 397, 397, 397, 397, 397, ...</td>\n",
+       "      <td>[ , 500, 100, 100, 200, 3, 250, 500, 50, 1000,...</td>\n",
+       "      <td>[ , mg, ml, ml, mcg, mg, mg, mg, ml, ml, ml, m...</td>\n",
+       "      <td>[0, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 1, ...</td>\n",
+       "      <td>36</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1011746.0</td>\n",
-       "      <td>3013234.0</td>\n",
+       "      <td>1011746</td>\n",
+       "      <td>3013234</td>\n",
        "      <td>carevue</td>\n",
        "      <td>MICU</td>\n",
        "      <td>MICU</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>52.0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>52</td>\n",
        "      <td>2107-07-28 17:22:31</td>\n",
        "      <td>2107-08-01 11:03:44</td>\n",
        "      <td>3.7370</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>2107-07-29 05:22:31</td>\n",
+       "      <td>2107-07-29 17:22:31</td>\n",
+       "      <td>3013234</td>\n",
+       "      <td>[Acetaminophen, Alanine Aminotransferase (ALT)...</td>\n",
+       "      <td>[15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 1...</td>\n",
+       "      <td>[ , 20.0, 4.0, 64.0, 14.0, 30.0,  ,  , 23.0, 0...</td>\n",
+       "      <td>[ug/mL, IU/L, g/dL, IU/L, mEq/L, IU/L,  ,  , m...</td>\n",
+       "      <td>[4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, ...</td>\n",
+       "      <td>105</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>1010325.0</td>\n",
-       "      <td>3022526.0</td>\n",
+       "      <td>1010325</td>\n",
+       "      <td>3022526</td>\n",
        "      <td>metavision</td>\n",
        "      <td>MICU</td>\n",
        "      <td>MICU</td>\n",
-       "      <td>52.0</td>\n",
-       "      <td>52.0</td>\n",
+       "      <td>52</td>\n",
+       "      <td>52</td>\n",
        "      <td>2145-02-06 02:15:08</td>\n",
        "      <td>2145-02-07 18:47:37</td>\n",
        "      <td>1.6892</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>2145-02-06 14:15:08</td>\n",
+       "      <td>2145-02-07 02:15:08</td>\n",
+       "      <td>3022526</td>\n",
+       "      <td>[Alanine Aminotransferase (ALT), Alkaline Phos...</td>\n",
+       "      <td>[222, 222, 222, 222, 222, 222, 222, 222, 222, ...</td>\n",
+       "      <td>[17.0, 62.0, 11.0, 19.0, 25.0, 1.2, 8.5, 108.0...</td>\n",
+       "      <td>[IU/L, IU/L, mEq/L, IU/L, mEq/L, mg/dL, mg/dL,...</td>\n",
+       "      <td>[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...</td>\n",
+       "      <td>19</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>1012708.0</td>\n",
-       "      <td>3035542.0</td>\n",
+       "      <td>1012708</td>\n",
+       "      <td>3035542</td>\n",
        "      <td>metavision</td>\n",
        "      <td>SICU</td>\n",
        "      <td>SICU</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>33.0</td>\n",
+       "      <td>33</td>\n",
+       "      <td>33</td>\n",
        "      <td>2175-02-20 07:41:28</td>\n",
        "      <td>2175-02-23 10:21:01</td>\n",
        "      <td>3.1108</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaT</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaT</td>\n",
+       "      <td>2175-02-20 19:41:28</td>\n",
+       "      <td>2175-02-21 07:41:28</td>\n",
+       "      <td>3035542</td>\n",
+       "      <td>[Anion Gap, Bicarbonate, Chloride, Creatine Ki...</td>\n",
+       "      <td>[91, 91, 91, 91, 91, 91, 91, 91, 91, 91, 91, 9...</td>\n",
+       "      <td>[15.0, 24.0, 98.0, 3.0, 1.8, 3.9, 133.0, 1.0, ...</td>\n",
+       "      <td>[mEq/L, mEq/L, mEq/L, ng/mL, mg/dL, mEq/L, mEq...</td>\n",
+       "      <td>[4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 1, 1, ...</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 69 columns</p>\n",
+       "<p>5 rows × 31 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
        "   SUBJECT_ID  ICUSTAY_ID    DBSOURCE FIRST_CAREUNIT LAST_CAREUNIT  \\\n",
-       "0   1027140.0   3011529.0     carevue            CCU           CCU   \n",
-       "1   1027482.0   3011175.0     carevue           MICU          MICU   \n",
-       "2   1011746.0   3013234.0     carevue           MICU          MICU   \n",
-       "3   1010325.0   3022526.0  metavision           MICU          MICU   \n",
-       "4   1012708.0   3035542.0  metavision           SICU          SICU   \n",
+       "0     1027140     3011529     carevue            CCU           CCU   \n",
+       "1     1027482     3011175     carevue           MICU          MICU   \n",
+       "2     1011746     3013234     carevue           MICU          MICU   \n",
+       "3     1010325     3022526  metavision           MICU          MICU   \n",
+       "4     1012708     3035542  metavision           SICU          SICU   \n",
        "\n",
-       "   FIRST_WARDID  LAST_WARDID               INTIME             OUTTIME     LOS  \\\n",
-       "0          57.0         57.0  2152-07-23 05:34:12 2152-07-24 18:37:32  1.5440   \n",
-       "1          12.0         12.0  2162-03-20 17:22:48 2162-03-22 18:26:10  2.0440   \n",
-       "2          52.0         52.0  2107-07-28 17:22:31 2107-08-01 11:03:44  3.7370   \n",
-       "3          52.0         52.0  2145-02-06 02:15:08 2145-02-07 18:47:37  1.6892   \n",
-       "4          33.0         33.0  2175-02-20 07:41:28 2175-02-23 10:21:01  3.1108   \n",
+       "   FIRST_WARDID  LAST_WARDID              INTIME             OUTTIME     LOS  \\\n",
+       "0            57           57 2152-07-23 05:34:12 2152-07-24 18:37:32  1.5440   \n",
+       "1            12           12 2162-03-20 17:22:48 2162-03-22 18:26:10  2.0440   \n",
+       "2            52           52 2107-07-28 17:22:31 2107-08-01 11:03:44  3.7370   \n",
+       "3            52           52 2145-02-06 02:15:08 2145-02-07 18:47:37  1.6892   \n",
+       "4            33           33 2175-02-20 07:41:28 2175-02-23 10:21:01  3.1108   \n",
        "\n",
-       "   ... diagnosisstring subject_id stay_id first_careunit last_careunit  \\\n",
-       "0  ...             NaN        NaN     NaN            NaN           NaN   \n",
-       "1  ...             NaN        NaN     NaN            NaN           NaN   \n",
-       "2  ...             NaN        NaN     NaN            NaN           NaN   \n",
-       "3  ...             NaN        NaN     NaN            NaN           NaN   \n",
-       "4  ...             NaN        NaN     NaN            NaN           NaN   \n",
+       "   ... ICD9_CODE             12h_obs             24h_obs       ID  \\\n",
+       "0  ...       NaN 2152-07-23 17:34:12 2152-07-24 05:34:12  3011529   \n",
+       "1  ...       NaN 2162-03-21 05:22:48 2162-03-21 17:22:48  3011175   \n",
+       "2  ...       NaN 2107-07-29 05:22:31 2107-07-29 17:22:31  3013234   \n",
+       "3  ...       NaN 2145-02-06 14:15:08 2145-02-07 02:15:08  3022526   \n",
+       "4  ...       NaN 2175-02-20 19:41:28 2175-02-21 07:41:28  3035542   \n",
        "\n",
-       "   intime  outtime  los  anchor_age  dod  \n",
-       "0     NaT      NaT  NaN         NaN  NaT  \n",
-       "1     NaT      NaT  NaN         NaN  NaT  \n",
-       "2     NaT      NaT  NaN         NaN  NaT  \n",
-       "3     NaT      NaT  NaN         NaN  NaT  \n",
-       "4     NaT      NaT  NaN         NaN  NaT  \n",
+       "                                           code_name  \\\n",
+       "0  [Anion Gap, Bicarbonate, Bilirubin, Total, Cho...   \n",
+       "1  [30060, Levofloxacin, Dextrose 5%, NS, Fentany...   \n",
+       "2  [Acetaminophen, Alanine Aminotransferase (ALT)...   \n",
+       "3  [Alanine Aminotransferase (ALT), Alkaline Phos...   \n",
+       "4  [Anion Gap, Bicarbonate, Chloride, Creatine Ki...   \n",
        "\n",
-       "[5 rows x 69 columns]"
+       "                                         code_offset  \\\n",
+       "0  [78, 78, 78, 78, 78, 78, 78, 78, 78, 78, 78, 7...   \n",
+       "1  [337, 397, 397, 397, 397, 397, 397, 397, 397, ...   \n",
+       "2  [15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 15, 1...   \n",
+       "3  [222, 222, 222, 222, 222, 222, 222, 222, 222, ...   \n",
+       "4  [91, 91, 91, 91, 91, 91, 91, 91, 91, 91, 91, 9...   \n",
+       "\n",
+       "                                               value  \\\n",
+       "0  [11.0, 25.0, 0.3, 5.9, 31.0, 108.0, 183.0, 0.7...   \n",
+       "1  [ , 500, 100, 100, 200, 3, 250, 500, 50, 1000,...   \n",
+       "2  [ , 20.0, 4.0, 64.0, 14.0, 30.0,  ,  , 23.0, 0...   \n",
+       "3  [17.0, 62.0, 11.0, 19.0, 25.0, 1.2, 8.5, 108.0...   \n",
+       "4  [15.0, 24.0, 98.0, 3.0, 1.8, 3.9, 133.0, 1.0, ...   \n",
+       "\n",
+       "                                                 uom  \\\n",
+       "0  [mEq/L, mEq/L, mg/dL, Ratio, mg/dL, mg/dL, mg/...   \n",
+       "1  [ , mg, ml, ml, mcg, mg, mg, mg, ml, ml, ml, m...   \n",
+       "2  [ug/mL, IU/L, g/dL, IU/L, mEq/L, IU/L,  ,  , m...   \n",
+       "3  [IU/L, IU/L, mEq/L, IU/L, mEq/L, mg/dL, mg/dL,...   \n",
+       "4  [mEq/L, mEq/L, mEq/L, ng/mL, mg/dL, mEq/L, mEq...   \n",
+       "\n",
+       "                                          code_order  seq_len  \n",
+       "0  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       20  \n",
+       "1  [0, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 1, ...       36  \n",
+       "2  [4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, ...      105  \n",
+       "3  [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...       19  \n",
+       "4  [4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 4, 1, 1, ...       30  \n",
+       "\n",
+       "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,29 +244,24 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "df = pd.read_pickle('../train/pooled_df.pkl')\n",
+    "df = pd.read_pickle('../train/mimiciii_df.pkl')\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/noelkj/miniconda3/envs/ai/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Downloading: 100%|██████████| 49.0/49.0 [00:00<00:00, 19.9kB/s]\n",
-      "Downloading: 100%|██████████| 462/462 [00:00<00:00, 162kB/s]\n",
-      "Downloading: 100%|██████████| 213k/213k [00:00<00:00, 2.55MB/s]\n",
-      "Downloading: 100%|██████████| 112/112 [00:00<00:00, 55.8kB/s]\n",
-      "Downloading: 100%|██████████| 433M/433M [00:30<00:00, 14.3MB/s] \n"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "print(df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from transformers import AutoTokenizer, AutoModel\n",
     "\n",
@@ -246,10 +269,12 @@
     "model_name = \"dmis-lab/biobert-v1.1\"\n",
     "tokenizer = AutoTokenizer.from_pretrained(model_name)\n",
     "model = AutoModel.from_pretrained(model_name)\n",
+    "max_length = 256\n",
     "\n",
     "\n",
     "def embed(input_text):\n",
-    "    tokens = tokenizer(input_text, return_tensors=\"pt\")\n",
+    "    tokens = tokenizer(input_text, return_tensors=\"pt\", max_length=max_length, truncation=True, padding=\"max_length\")\n",
+    "\n",
     "    embeddings = model(**tokens).last_hidden_state\n",
     "    pooled_embeddings = embeddings.mean(dim=1)\n",
     "    return pooled_embeddings"
@@ -257,18 +282,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/pb/0ltrmd7x4dg5j794jr3tqh1h0000gn/T/ipykernel_35493/1121009204.py:7: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
-      "  df_embed = df_embed.append({'embed': embed_input}, ignore_index=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def embed_data(df):\n",
     "    df_embed = pd.DataFrame()\n",
@@ -276,7 +292,9 @@
     "        for n in range(len(df['code_name'][k])):\n",
     "            input_text = str(df['code_name'][k][n]) + str(df['value'][k][n]) + str(df['uom'][k][n])\n",
     "            embed_input = embed(input_text)\n",
-    "            df_embed = df_embed.append({'embed': embed_input}, ignore_index=True)\n",
+    "            # Save to df\n",
+    "            df_embed = pd.concat([df_embed, pd.DataFrame(embed_input.detach().numpy())])\n",
+    "\n",
     "    return df_embed\n",
     "\n",
     "# Test with first 10 rows\n",
